[package]
name = "rust_ssl_file_server"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
dashmap = "6.1.0"
dotenv = "0.15.0"
env_logger = { version = "0.11.8", features= ["color"]}
log = "0.4.27"
openssl = "0.10.73"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
crc = "3.3.0"
sqlx = { version = "0.8.6", features = ["mysql", "runtime-tokio", "chrono"] }
tokio = { version = "1.45.1", features = ["full"] }
jsonwebtoken = "9.3.1"
